# Requirements Update (requirements will need to be reinstalled)
Updated gitpython requirement to 3.1.43

# Removed Features

# New Features
Add Page Topics Options to `imdb_search`

# Updates

# Defaults

# Bug Fixes
Fixes #1965 `download_url_assets` was causing `url_background` to upload as a poster
Fixes #1969 Ignore validating TPDb links

Various other Minor Fixes

Closed legacy issues on GitHub