@@ -1,0 +1,25 @@
+FROM python:3.11-slim-buster
+ARG BRANCH_NAME=master
+ENV BRANCH_NAME ${BRANCH_NAME}
+ENV TINI_VERSION v0.19.0
+ENV PMM_DOCKER True
+COPY requirements.txt requirements.txt
+RUN echo "**** install system packages ****" \
+ && apt-get update \
+ && apt-get upgrade -y --no-install-recommends \
+ && apt-get install -y tzdata --no-install-recommends \
+ && apt-get install -y gcc g++ libxml2-dev libxslt-dev libz-dev libjpeg62-turbo-dev zlib1g-dev wget curl \
+ && wget -O /tini https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-"$(dpkg --print-architecture | awk -F- '{ print $NF }')" \
+ && chmod +x /tini \
+ && sed -i "s|lxml==5.2.1|lxml==5.1.1|g" /requirements.txt
+ && pip3 install --no-cache-dir --upgrade --requirement /requirements.txt \
+ && apt-get --purge autoremove gcc g++ libxml2-dev libxslt-dev libz-dev -y \
+ && apt-get clean \
+ && apt-get update \
+ && apt-get check \
+ && apt-get -f install \
+ && apt-get autoclean \
+ && rm -rf /requirements.txt /tmp/* /var/tmp/* /var/lib/apt/lists/*
+ COPY . /
+VOLUME /config
+ENTRYPOINT ["/tini", "-s", "python3", "plex_meta_manager.py", "--"]
